Set PORT variable in Run Tests step since it's now required

--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -18,6 +18,6 @@ jobs:
         mix local.hex --force
         mix deps.get
     - name: Run Tests
-      run: mix test
+      run: PORT=4040 mix test
     - name: Check Formatting
       run: mix format --check-formatted
